--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Assignment 3 Solution</title>
+    <title>Aggie Snowglobe</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div id="app">
         <div id="header-container">
-            <h1>Assignment 3 Solution</h1>
-            <h2>Textures</h2>
+            <h1>Aggie Snowglobe</h1>
         </div>
         <div class="settings-container">
             <div class="setting">
                 <h3>3D Scene</h3>
                 <div class="setting-item-container">
-                    <div id="openfileLabel" class="setting-item active">Load Scene File<br></div>
+                    <div id="openfileLabel" class="setting-item active">Load File<br></div>
                     <div id="openfileAction" class="setting-item inactive">
                         <input id="openfileActionInput" type="file" multiple="false" accept="application/json">
                     </div>
@@ -30,26 +29,14 @@
                     <div id="shadingTextured" class="setting-item inactive">[V] Textured</div>
                 </div>
             </div>
-            <div class="setting">
-                <h3>Shading Debug</h3>
-                <div class="setting-item-container">
-                    <div id="shadingDebugNormals" class="setting-item inactive">[Hold N] Normals</div>
-                </div>
-            </div>
+            
             <div class="setting">
                 <h3>Control</h3>
                 <div class="setting-item-container">
                     <div id="controlCamera" class="setting-item inactive">Camera</div>
-                    <div id="controlSceneNode" class="setting-item inactive">[Hold Q] Scene Node</div>
                 </div>
             </div>
-            <div class="setting">
-                <h3>Select Scene Node</h3>
-                <div class="setting-item-container">
-                    <div id="selectSceneNodeLabel" class="setting-item active">Select Scene Node</div>
-                    <select id="selectSceneNodeSelect" disabled></select>
-                </div>
-            </div>
+            
         </div>
 
         <div id="canvas-container">
