Added shaking (scene node has trouble shaking though)

--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
                 <h3>Control</h3>
                 <div class="setting-item-container">
                     <div id="controlCamera" class="setting-item inactive">Camera</div>
-                    <div id="controlSceneNode" class="setting-item inactive">[Hold Q] Scene Node</div>
-                </div>
-            </div>
-            <div class="setting">
-                <h3>Select Scene Node</h3>
-                <div class="setting-item-container">
-                    <div id="selectSceneNodeLabel" class="setting-item active">Select Scene Node</div>
-                    <select id="selectSceneNodeSelect" disabled></select>
+                    <div id="shakeGlobe" class="setting-item inactive">[Hold S] Shake Globe</div>
                 </div>
             </div>
         </div>
