--- a/index.html
+++ b/index.html
@@ -42,16 +42,9 @@
                   <h3>CONTROL</h3>
                   <div class="setting-item-container">
                       <div id="controlCamera" class="setting-item inactive">Camera</div>
-                      <div id="controlSceneNode" class="setting-item inactive">[Hold Q] Scene Node</div>
+                      <div id="controlSceneNode" class="setting-item inactive">[Press S] Shake Globe</div>
                   </div>
-              </div>
-              <div class="setting">
-                  <h3>SELECT SCENE NODE</h3>
-                  <div class="setting-item-container">
-                      <div id="selectSceneNodeLabel" class="setting-item active">Select Scene Node</div>
-                      <select id="selectSceneNodeSelect" disabled></select>
-                  </div>
-              </div>
+                </div>
           </div>
           <div id="canvas-container">
               <canvas id="canvas"></canvas>
