--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Gowun+Dodum&family=Jersey+10&family=Kode+Mono:wght@400..700&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+    <!-- The CSS snowflake effect is by the github user pajasevi. Source code: https://pajasevi.github.io/CSSnowflakes/-->
     
 </head>
 
