Globe does not fly anymore

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h3>Control</h3>
                 <div class="setting-item-container">
                     <div id="controlCamera" class="setting-item inactive">Camera</div>
-                    <div id="shakeGlobe" class="setting-item inactive">[Hold S] Shake Globe</div>
+                    <div id="shakeGlobe" class="setting-item inactive">[Press S] Shake Globe</div>
                 </div>
             </div>
         </div>
